# SQuatS

./: .clang-format  .gitignore  CHANGELOG.md  CITATION.bib  CITATION.cff  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
configs/: hea5_bcc_222.yaml  hea5_bcc_223.yaml  hea5_bcc_233.yaml  hea5_bcc_333.yaml  hea5_bcc_334.yaml  hea5_bcc_344.yaml  hea5_bcc_445.yaml  hea5_bcc_455.yaml  hea5_bcc_4x4x4.yaml  hea5_bcc_556.yaml  hea5_bcc_566.yaml  hea5_bcc_5x5x5.yaml  hea5_bcc_5x5x5_mul.yaml  hea5_bcc_666.yaml  hea5_bcc_667.yaml  hea5_bcc_677.yaml  hea5_bcc_777.yaml  mul_smoke_sc27.yaml  smoke_sc27.yaml  w50mo25cr25_4x4x4.yaml  w70cr30_4x4x4.yaml  wcrtafepb_333.yaml  wcrtafepb_334.yaml  wcrtafepb_344.yaml  wcrtafepb_444.yaml  wcrtafepb_445.yaml  wcrtafepb_455.yaml  wcrtafepb_555.yaml  wcrtafepb_556.yaml  wcrtafepb_566.yaml  wcrtafepb_666.yaml
docs/: DESIGN_v1.9.md  DEV_NOTES.md  FINAL_REPORT.md  FLOWCHARTS.md  INSTALL.md  SPEC.md  STEP2_REPORT.md  STEP3_REPORT.md  STEP4_REPORT.md  STEP5_REPORT.md  STEP6_REPORT.md  STEP7_REPORT.md  SUPERCELL_STUDY.md  TEST_MATRIX.txt
include/exsqs/: cluster.hpp  config.hpp  correlation.hpp  dedup.hpp  displacements.hpp  evolution.hpp  island_engine.hpp  lattice.hpp  linalg.hpp  rng.hpp  score.hpp  serialize.hpp  structure.hpp  symmetry.hpp  testcells.hpp  zones.hpp
scripts/: chain_resume.sh
scripts/hpc/helios/: compile.sh  env.sh  run_ladder_array.sbatch  run_mpi.sbatch  run_omp_chain.sbatch
scripts/hpc/lumi/: compile.sh  env.sh  run_ladder_array.sbatch  run_mpi.sbatch  run_omp_chain.sbatch
scripts/slurm/: exsqs_mpi.sbatch  exsqs_omp.sbatch
src/: cluster.cpp  config.cpp  correlation.cpp  dedup.cpp  displacements.cpp  evolution.cpp  lattice.cpp  main.cpp  mpi_main.cpp  score.cpp  serialize.cpp  structure.cpp  symmetry.cpp  testcells.cpp  zones.cpp
tests/: CMakeLists.txt  test_checkpoint.cpp  test_config.cpp  test_correlation.cpp  test_displacements.cpp  test_e2e.cpp  test_evolution.cpp  test_geometry.cpp  test_hmatrix.cpp  test_multiplets.cpp  test_parallel.cpp  test_rng.cpp  test_schedule.cpp  test_score.cpp  test_symmetry.cpp  test_ternary.cpp
tests/data/: dcounts_cpp.txt  dcounts_ref.txt  manifest.txt  sg_ref.txt
tests/data/cells/: b2_111.vasp  b2_222.vasp  bcc16_c2_a.vasp  bcc16_inv_a.vasp  bcc16_inv_b.vasp  bcc16_rand_a.vasp  bcc16_rand_b.vasp  bcc_pure_222.vasp  fcc32_rand_a.vasp  fcc_pure_222.vasp  hcp_pure_221.vasp  l10_111.vasp  l12_111.vasp  l12_222.vasp  sc27_inv_a.vasp  sc27_rand_a.vasp  sc_pure_222.vasp
tools/: bench.cpp  bench_scaling.cpp  check_coherence.py  gen_testcells.cpp  run_all_tests.sh  test_align_roundtrip.sh  test_mpi_invariance.sh
tools/py/: align_to_config.py  gen_reference.py  to_poscar.py  validate.py
